done only auth and file upload and delete it
