# api/docs/swagger.yaml
@@ -34,27 +34,6 @@ definitions:
       message:
         type: string
     type: object
-  models.User:
-    properties:
-      bio:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: string
-      name:
-        type: string
-      password_hash:
-        type: string
-      profile_image:
-        type: string
-      surname:
-        type: string
-      updated_at:
-        type: string
-      username:
-        type: string
-    type: object
 info:
   contact: {}
   description: This is a MiniTweeter API Gateway server.
@@ -200,218 +179,6 @@ paths:
       summary: Upload File to MinIO
       tags:
       - upload
-  /v1/users:
-    post:
-      consumes:
-      - application/json
-      description: API for creating user
-      parameters:
-      - description: request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/models.CreateUser'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Response'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - BearerAuth: []
-      summary: User Create
-      tags:
-      - users
-    put:
-      consumes:
-      - application/json
-      description: API for updating user
-      parameters:
-      - description: request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Response'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - BearerAuth: []
-      summary: User Update
-      tags:
-      - users
-  /v1/users/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: API for deleting user
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Response'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - BearerAuth: []
-      summary: Delete User
-      tags:
-      - users
-    get:
-      consumes:
-      - application/json
-      description: API for getting user by id
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Response'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - BearerAuth: []
-      summary: Get User By ID
-      tags:
-      - users
-  /v1/users/list:
-    get:
-      consumes:
-      - application/json
-      description: API for getting users list with pagination and filters
-      parameters:
-      - description: 'Page number {default: 1}'
-        in: query
-        name: page
-        required: true
-        type: integer
-      - description: 'Limit number {default: 10}'
-        in: query
-        name: limit
-        required: true
-        type: integer
-      - description: Search keyword (role, login, fullname, phone, etc.)
-        in: query
-        name: search
-        type: string
-      - description: Sort field
-        in: query
-        name: sort_by
-        type: string
-      - description: Sorting order (asc or desc)
-        in: query
-        name: order
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/models.Response'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/models.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.Response'
-        default:
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Response'
-      security:
-      - BearerAuth: []
-      summary: Get Users List With Pagination
-      tags:
-      - users
 securityDefinitions:
   BearerAuth:
     in: header
